about page additions

--- a/aboutus.html
+++ b/aboutus.html
@@ -47,86 +47,109 @@
 
 <body id="body" class="bg-image" style="background-image: url('img/twofaces.jpg'); height: 100vh; background-repeat: no-repeat; background-attachment: fixed;">
 
-    <!-- Greeting Container -->
+    <!-- About Ed -->
     <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
         <div class="row">
             <div class="col">
-                <h5 class="text-center mt-2 mb-1">This is Ed:</h5>
+                <h5 class="text-center mt-2 mb-2">Ed and Bottles for Bales:</h5>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 pb-2  align-self-center">
+                <img src="img/5.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed"/>
+            </div>
+            <div class="col-lg-9 col-sm-6">                                                         <!-- * Explain Bottles for bales ------------------------------------>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                <br><br>
+                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
         </div>
     </div>
 
-        <!-- Greeting Container -->
+        <!-- About Little Brook -->
         <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
             <div class="row">
                 <div class="col">
-                    <h5 class="text-center mt-2 mb-1">Little Brook Farm Horse Sanctuary</h5>
+                    <h5 class="text-center mt-2 mb-2">Little Brook Farm (Horse Sanctuary)</h5>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-            <!-- Greeting Container -->
-    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
-        <div class="row">
-            <div class="col">
-                <h5 class="text-center mt-2 mb-1">Horse 1</h5>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div>
-        </div>
-    </div>
-
-        <!-- Greeting Container -->
-        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
             <div class="row">
-                <div class="col">
-                    <h5 class="text-center mt-2 mb-1">Horse 2</h5>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                <div class="col-lg-9 col-sm-6">                                                         <!-- * Explain Bottles for bales ------------------------------------>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                    <br><br>
+                        Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                </div>
+                <div class="col-lg-3 col-sm-6 pb-2  align-self-center">
+                    <img src="img/lbf.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed"/>
+                </div>
+            </div>
+        </div>
+
+        <!-- About Abe -->
+        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-center mt-2 mb-2">Abe</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 pb-2  align-self-center">
+                    <img src="img/1.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed"/>
+                </div>
+                <div class="col-lg-8 col-sm-6">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                    <br><br>
+                        Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                 </div>
             </div>
         </div>
 
-            <!-- Greeting Container -->
-    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
-        <div class="row">
-            <div class="col">
-                <h5 class="text-center mt-2 mb-1">Horse 3</h5>
+        <!-- About Teamo and Jackson -->
+        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-center mt-2 mb-2">Teamo and Jackson</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                  
+                    </p>
+                </div>
+                <div class="col-lg-8 col-sm-6 pb-2  align-self-center">
+                    <img src="img/twoHorses.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed"/>
+                </div>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+
+       <!-- Greeting Container -->
+       <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
+        <div class="row">
+            <div class="col">
+                <h5 class="text-center mt-2 mb-2">Donkeys too!</h5>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 pb-2  align-self-center">
+                <img src="img/donkey1.jpg" class="w-100 h-100 rounded-3" alt="Picture of Ed"/>
+            </div>
+            <div class="col-lg-9 col-sm-6">                                                         <!-- * Explain Bottles for bales ------------------------------------>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                <br><br>
+                    Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
         </div>
     </div>
-
 
 </body>
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
