--- a/aboutus.html
+++ b/aboutus.html
@@ -51,7 +51,8 @@
     <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
         <div class="row">
             <div class="col">
-                <h5 class="text-center mt-2 mb-2">Ed and Bottles for Bales:</h5>
+                <h5 class="text-center mt-3">Ed and Bottles for Bales</h5>
+                <hr>
             </div>
         </div>
         <div class="row">
@@ -72,7 +73,8 @@
         <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
             <div class="row">
                 <div class="col">
-                    <h5 class="text-center mt-2 mb-2">Little Brook Farm (Horse Sanctuary)</h5>
+                    <h5 class="text-center mt-3">Little Brook Farm (Horse Sanctuary)</h5>
+                    <hr>
                 </div>
             </div>
             <div class="row">
@@ -93,7 +95,8 @@
         <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
             <div class="row">
                 <div class="col">
-                    <h5 class="text-center mt-2 mb-2">Abe</h5>
+                    <h5 class="text-center mt-3">Abe</h5>
+                    <hr>
                 </div>
             </div>
             <div class="row">
@@ -114,7 +117,8 @@
         <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
             <div class="row">
                 <div class="col">
-                    <h5 class="text-center mt-2 mb-2">Teamo and Jackson</h5>
+                    <h5 class="text-center mt-3">Teamo and Jackson</h5>
+                    <hr>
                 </div>
             </div>
             <div class="row">
@@ -134,7 +138,8 @@
        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
         <div class="row">
             <div class="col">
-                <h5 class="text-center mt-2 mb-2">Donkeys too!</h5>
+                <h5 class="text-center mt-3">Donkeys too!</h5>
+                <hr>
             </div>
         </div>
         <div class="row">
