--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
     <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
         <div class="row">
             <div class="col">
-                <h5 class="text-center mt-2 mb-1">Welcome to Bottles for Bales.</h5>
+                <h5 class="text-center mt-3">Welcome to Bottles for Bales.</h5>
+                <hr>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -105,7 +106,8 @@
 <!-- Body / Background Image -->
 <!-- Form Container -->
     <div class="container-lg mb-2 border border-2 border-dark rounded-3 bg-gradient" id="containerLight">
-        <h5 class="text-center pt-2 mt-1">Have bottles ready for pick up?</h5>
+        <h5 class="text-center mt-3">Have bottles ready for pick up?</h5>
+        <hr>
         <form>
             <div class="row">
                 <div class="col-sm-12 col-md-4">
@@ -203,8 +205,7 @@
     </div>
 </div>
 <!-- * Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
- integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="scripts.js"></script>     
