--- a/dropoff.html
+++ b/dropoff.html
@@ -51,63 +51,36 @@
     <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
         <div class="row">
             <div class="col">
-                <h5 class="text-center mt-2 mb-1">Location 1</h5>
+                <h5 class="text-center mt-2 mb-1">Drop-off Locations</h5>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                    Below is a list of places you can drop off bottles. Just tell one of the staff that you are donating to 'Bottles for Bales.'
                 </p>
             </div>
+
         </div>
     </div>
 
         <!-- Greeting Container -->
-        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
+        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2 align-items-center" id="containerDark">
             <div class="row">
                 <div class="col">
-                    <h5 class="text-center mt-2 mb-1">Location 2</h5>
+                    <h5 class="text-center mt-3">Little Brook Farm</h5>
+                    <hr>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-            <!-- Greeting Container -->
-    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
-        <div class="row">
-            <div class="col">
-                <h5 class="text-center mt-2 mb-1">Location 3</h5>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </div>
-        </div>
-    </div>
-
-        <!-- Greeting Container -->
-        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
             <div class="row">
-                <div class="col">
-                    <h5 class="text-center mt-2 mb-1">Location 4</h5>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                <div class="col-md-5">                                                         <!-- * Explain Bottles for bales ------------------------------------>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                     </p>
                 </div>
+                <div class="col-md-7 pb-1">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11778.885035750207!2d-73.58265409472664!3d42.43366770560981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ddf0ba4ba5bd83%3A0xfa7c41ba823087b0!2sLittle%20Brook%20Farm!5e0!3m2!1sen!2sus!4v1644704813719!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
             </div>
         </div>
 
@@ -115,18 +88,120 @@
     <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
         <div class="row">
             <div class="col">
-                <h5 class="text-center mt-2 mb-1">Location 5</h5>
+                <h5 class="text-center mt-3">East Greenbush Bottle and Can Redemption Center</h5>
+                <hr>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+        <div class="row">
+            <div class="col-md-5">                                                         <!-- * Explain Bottles for bales ------------------------------------>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                 </p>
+            </div>
+            <div class="col-md-7 pb-1">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3492.7080211634084!2d-73.71332601608049!3d42.59762354254967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89dde25d2e3bd6d9%3A0x76b321c4e4598606!2s6%20Cent%20Redemption!5e0!3m2!1sen!2sus!4v1644707360355!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </div>
 
+        <!-- Greeting Container -->
+        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-center mt-3">Chatham Village Auto</h5>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                    </p>
+                </div>
+                <div class="col-md-7 pb-1">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.266377491093!2d-73.60842564838107!3d42.358162043110624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ddf3cb2782a305%3A0x26725939b43f5792!2sChatham%20Village%20Auto!5e0!3m2!1sen!2sus!4v1644707461300!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+
+            <!-- Greeting Container -->
+    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
+        <div class="row">
+            <div class="col">
+                <h5 class="text-center mt-3">Message In A Bottle Redemption Center</h5>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                </p>
+            </div>
+            <div class="col-md-7 pb-1">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2953.1379860308366!2d-73.76850404838297!3d42.254225749667945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89dd9561ec14efeb%3A0x1fa048524ecef294!2sMessage%20In%20A%20Bottle!5e0!3m2!1sen!2sus!4v1644707526277!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>   
+            </div>
+        </div>
+    </div>
+
+            <!-- Greeting Container -->
+            <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="text-center mt-3">Bottle and Can Depot</h5>
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-5">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                        </p>
+                    </div>
+                    <div class="col-md-7 pb-1">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7264838797673!2d-73.75486814838163!3d42.32703224507616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ddeb65b0833835%3A0xb5550d0624d49fb0!2sBottle%20and%20Can%20Depot!5e0!3m2!1sen!2sus!4v1644707647114!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+    
+                <!-- Greeting Container -->
+        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
+            <div class="row">
+                <div class="col">
+                    <h5 class="text-center mt-3">Creating Redemption Center</h5>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                    </p>
+                </div>
+                <div class="col-md-7 pb-1">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2067.5652793536437!2d-73.93137212400855!3d42.873290360326685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de6c03ec30c681%3A0x426a983002f12ceb!2sCreating%20Change%20Redemption%20Center!5e0!3m2!1sen!2sus!4v1644707731934!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+
+                    <!-- Greeting Container -->
+                    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
+                        <div class="row">
+                            <div class="col">
+                                <h5 class="text-center mt-3">Valu Space Storage Center</h5>
+                                <hr>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-5">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+                                </p>
+                            </div>
+                            <div class="col-md-7 pb-1">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.928361451246!2d-73.75934854837239!3d42.85324581170189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89de13113cefc389%3A0x8a6a97ad682fd1ee!2sValuSpace%20Personal%20Storage!5e0!3m2!1sen!2sus!4v1644707808969!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                            </div>
+                        </div>
+                    </div>
 
 </body>
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
