--- a/dropoff.html
+++ b/dropoff.html
@@ -72,14 +72,14 @@
                     <hr>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-5">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+            <div class="row align-items-center">
+                <div class="col-md-5 ">                                                         <!-- * Explain Bottles for bales ------------------------------------>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                     </p>
                 </div>
                 <div class="col-md-7 pb-1">                                                         <!-- * Explain Bottles for bales ------------------------------------>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11778.885035750207!2d-73.58265409472664!3d42.43366770560981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ddf0ba4ba5bd83%3A0xfa7c41ba823087b0!2sLittle%20Brook%20Farm!5e0!3m2!1sen!2sus!4v1644704813719!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.721988455498!2d-73.57610948454138!3d42.43365217918201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ddf0ba4ba5bd83%3A0xfa7c41ba823087b0!2sLittle%20Brook%20Farm!5e0!3m2!1sen!2sus!4v1644797563006!5m2!1sen!2sus" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
             </div>
     
                 <!-- Greeting Container -->
-        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerLight">
+        <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2 " id="containerLight">
             <div class="row">
                 <div class="col">
                     <h5 class="text-center mt-3">Creating Redemption Center</h5>
